[package]
name = "oracle-sanity-engine-contracts"
version = "0.2.0"
edition = "2021"
description = "Soroban smart contract for oracle cross-validation and circuit breaking on Stellar"
authors = ["ScutumNetwork"]
license = "MIT"
repository = "https://github.com/ScutumNetwork/oracle-sanity-engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0"

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
incremental = false
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
